Bug 1554490: Don't count popups as visible windows for CanTakeFocus. r=jmathies

I did some cleanup while here: This now uses the callback's lParam
instead of a global, and does the enumeration of all windows only if
the foreground window doesn't already belong to this process (which
was proposed in bug 259816 comment 68 but didn't make it into the patch).

Differential Revision: https://phabricator.services.mozilla.com/D57922